fix: gap on the left of icon was buged

--- a/assets/resources/styles/sass/components/_global.scss
+++ b/assets/resources/styles/sass/components/_global.scss
@@ -143,7 +143,6 @@ i {
   }
   &.right {
     float: right;
-    margin-left: 10px;
   }
   &.tiny {
     font-size: 1rem;
