--- a/index.css
+++ b/index.css
@@ -2639,7 +2639,6 @@ i.left {
 }
 i.right {
   float: right;
-  margin-left: 10px;
 }
 i.tiny {
   font-size: 1rem;
